--- a/docs/ver1/aquamarine.scss
+++ b/docs/ver1/aquamarine.scss
@@ -23,7 +23,7 @@ $enable-print-styles:       true;
 // Colors
 
 $theme-colors: (
-  primary: #00AEEF,
+  primary: #12bbad,
   secondary: #4f70ce,
   light: #f3f3f3,
   dark: #151515,
@@ -34,9 +34,9 @@ $theme-colors: (
 );
 
 $body-bg: white;
-$body-color: #545454;
+$body-color: #333;
 $body-color-inverse: invert($body-color) !default;
-$link-color: #00AEEF;
+$link-color: #12bbad;
 
 // Fonts
 $font-family-base: Roboto;
@@ -54,7 +54,7 @@ $headings-line-height: 1.2;
 
 
 $spacer: 1.5rem;
-
+$container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 960px);
 
 // Components
 $border-width: 1px !default;
@@ -74,10 +74,6 @@ $breadcrumb-bg: transparent !default;
 // Carousel
 $carousel-caption-width:            					100% !default;
 $carousel-indicator-height:                   6px !default;
-
-
-
-
 
 @import 'bootstrap-4.1.3';
 
