--- a/docs/ver1/common.css
+++ b/docs/ver1/common.css
@@ -65,3 +65,11 @@
 .slick-current+.slick-slide {
   transform-origin: -10% 50%;
 }
+
+/* グローバルメニューを上で止める */
+.fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+}
