--- a/docs/ver1/common.css
+++ b/docs/ver1/common.css
@@ -162,3 +162,63 @@
   zoom: 1;
   /*IE*/
 }
+
+  /* modal フルスクリーン */
+  .fullscreen{
+    z-index: 99999999;
+  }
+.fullscreen .modal-dialog {
+  margin: 0 0 0 0;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  padding: 0;;
+}
+
+.fullscreen .modal-content {
+  height: 100%;
+  min-height: 100%;
+  border-radius: 0;
+
+  overflow:auto;
+}
+
+.fullscreen .modal-content .modal-header{
+  border: 0px;
+}
+
+.fullscreen .modal-content button{
+  opacity: 1;
+}
+
+.fullscreen .modal-content button span{
+
+  font-weight: 1;
+  font-size: 26px;
+  text-shadow: none;
+}
+
+.fullscreen .modal-body .modal-logo img {
+  width: 158px;
+  padding-bottom: 84px;
+}
+
+.fullscreen .modal-body ul {
+  padding: 0 0 0 0;
+}
+.fullscreen .modal-body li {
+  padding-bottom: 43px;
+}
+.fullscreen .modal-body a {
+
+  font-size: 16px;
+}
+
+.fullscreen .modal-body .social img {
+  width: 56px;
+  margin: 8px;
+}
+.modal-title{
+  color: #fff;
+}
