--- a/docs/ver1/common.css
+++ b/docs/ver1/common.css
@@ -204,17 +204,6 @@
   padding-bottom: 84px;
 }
 
-.fullscreen .modal-body ul {
-  padding: 0 0 0 0;
-}
-.fullscreen .modal-body li {
-  padding-bottom: 43px;
-}
-.fullscreen .modal-body a {
-
-  font-size: 16px;
-}
-
 .fullscreen .modal-body .social img {
   width: 56px;
   margin: 8px;
@@ -253,4 +242,18 @@
   opacity: 0.7;
   zoom: 1;
   /*IE*/
+}
+
+.check{
+  line-height: 1.5;
+  padding: 0.3em 0;
+  list-style-type: none!important;/*ポチ消す*/
+}
+
+.check:before {
+  font-family: FontAwesome;
+  content: "\f00c";
+  position: absolute;
+  left : 1.2em; /*左端からのアイコンまで*/
+  color: #333333; /*アイコン色*/
 }
