--- a/docs/ver1/common.css
+++ b/docs/ver1/common.css
@@ -267,3 +267,46 @@
 .check a:hover{
     color: #F00038;
 }
+
+/* table エリアから探す */
+table.areasearch{
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table.areasearch tr{
+  border-bottom: solid 2px white;
+}
+
+table.areasearch tr:last-child{
+  border-bottom: none;
+}
+
+table.areasearch th{
+  position: relative;
+  text-align: left;
+  width: 20%;
+  background-color: #52c2d0;
+  color: white;
+  padding: 20px 0 20px 10px;
+}
+
+table.areasearch th:after{
+  display: block;
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  top:calc(50% - 10px);
+  right:-10px;
+  border-left: 10px solid #52c2d0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+table.areasearch td{
+  text-align: left;
+  width: 80%;
+  background-color: #eee;
+  padding: 20px 0 20px 20px;
+}
