--- a/docs/ver2/common.css
+++ b/docs/ver2/common.css
@@ -276,3 +276,17 @@
 .spmainmenu a:hover{
   color: #333333;
 }
+
+/* iframe */
+.iframe-content {
+   position: relative;
+ width: 100%;
+    padding: 75% 0 0 0;
+}
+.iframe-content iframe {
+    position: absolute;
+ top: 0;
+ left: 0;
+    width: 100%;
+    height: 100%;
+}
