--- a/docs/ver2/common.css
+++ b/docs/ver2/common.css
@@ -276,3 +276,26 @@
 .spmainmenu a:hover{
   color: #333333;
 }
+
+/* iframe 地図用 */
+body #japan-map-container {
+	over-flow:hidden;
+	position:relative;
+	display:fixed;
+	z-index:100;
+}
+
+body #japan-map-container > canvas {
+	position:relative;
+	top:0px;
+	left:0px;
+	z-index: 101;
+}
+
+body #japan-map-back-btn {
+	position:absolute;
+	top:10px;
+	left:10px;
+	z-index:100000;
+	display: none;
+}
