--- a/docs/ver2/common.css
+++ b/docs/ver2/common.css
@@ -282,3 +282,20 @@
   display: block;
   margin: auto;
 }
+
+/* slick */
+.center {
+   margin: 0 0 50px;
+ }
+
+.center img {
+   width: 100%; height: auto;
+ }
+
+.center .slick-next {
+   right: 20px; z-index: 99;
+ }
+
+.center .slick-prev {
+   left: 15px; z-index: 100;
+ }
