--- a/docs/ver2/common.css
+++ b/docs/ver2/common.css
@@ -284,18 +284,9 @@
 }
 
 /* slick */
-.center {
-   margin: 0 0 50px;
- }
-
-.center img {
-   width: 100%; height: auto;
- }
-
-.center .slick-next {
-   right: 20px; z-index: 99;
- }
-
-.center .slick-prev {
-   left: 15px; z-index: 100;
- }
+.slick-slide {
+  transition: .3s ease;
+}
+.slick-slide:not(.slick-current) {
+  opacity: .5;
+}
