--- a/docs/ver2/common.css
+++ b/docs/ver2/common.css
@@ -282,3 +282,18 @@
   display: block;
   margin: auto;
 }
+
+/* slick */
+.slider{
+    margin: 100px auto;
+    width: 80%;
+}
+.slider img{
+    height: auto;
+    width: 100%;
+}
+/*slick setting*/
+.slick-prev:before,
+.slick-next:before {
+    color: #000;
+}
