--- a/docs/ver2/common.css
+++ b/docs/ver2/common.css
@@ -277,10 +277,11 @@
   color: #333333;
 }
 
-/* iframe 真ん中寄せ 100% */
-.center_iframe {
-  display: block;
-  margin: auto;
+/* iframe 真ん中寄せ */
+.my-frame
+{
+margin: 0 auto;
+width: 768px;
 }
 
 
@@ -289,8 +290,63 @@
     height: auto;
     width: 100%;
 }
-/*slick setting*/
+/* slick setting */
 .slick-prev:before,
 .slick-next:before {
     color: #000;
+}
+
+/* スマホアコーディオン */
+.accordion-container .accordion-title {
+  position: relative;
+  margin: 0;
+  padding: 0.625em 0.625em 0.625em 2em;
+  background-color: #000;
+  font-size: 1.25em;
+  font-weight: normal;
+  color: #fff;
+  cursor: pointer;
+}
+.accordion-container .accordion-title:hover,
+.accordion-container .accordion-title:active,
+.accordion-title.open {
+  background-color: #00a0e9;
+}
+
+.accordion-container .accordion-title::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  width: 15px;
+  height: 2px;
+  /*縦線に*/
+  transform: rotate(90deg);
+  background: #fff;
+  transition: all .3s ease-in-out;
+}
+
+.accordion-container .accordion-title::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  /*横線*/
+  width: 15px;
+  height: 2px;
+  background: #fff;
+  transition: all .2s ease-in-out;
+}
+
+.accordion-container .accordion-title.open::before {
+  transform: rotate(180deg);
+}
+
+.accordion-container .accordion-title.open::after {
+  opacity: 0;
+}
+
+.accordion-content {
+  padding-left: 1em;
+  border: 1px solid #00a0e9;
 }
