--- a/docs/ver3/common.css
+++ b/docs/ver3/common.css
@@ -350,3 +350,28 @@ width: 768px;
   padding-left: 1em;
   border: 1px solid #00a0e9;
 }
+
+/* テーブル調整 */
+.tbl-r04 td {
+  border: solid 1px #ccc;
+  padding: 10px;
+  width: 50%;
+}
+
+@media screen and (max-width: 640px) {
+  .last td:last-child {
+    border-bottom: solid 1px #ccc;
+    width: 100%;
+  }
+
+  .tbl-r04 {
+    width: 90%;
+  }
+
+  .tbl-r04 th,
+  .tbl-r04 td {
+    border-bottom: none;
+    display: block;
+    width: 100%;
+  }
+}
