--- a/docs/ver3/aquamarine.css
+++ b/docs/ver3/aquamarine.css
@@ -57,6 +57,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
+  font-family: 'Noto Sans JP', sans-serif;
   font-size: 1rem;
   font-weight: 200;
   line-height: 1.5;
@@ -159,6 +160,7 @@ pre,
 code,
 kbd,
 samp {
+  font-family: 'Noto Sans JP', sans-serif;
   font-size: 1em; }
 
 pre {
@@ -208,6 +210,7 @@ select,
 optgroup,
 textarea {
   margin: 0;
+  font-family: 'Noto Sans JP', sans-serif;
   font-size: inherit;
   line-height: inherit; }
 
@@ -299,27 +302,28 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.75rem;
+  font-family: 'Noto Sans JP', sans-serif;
   font-weight: 200;
   line-height: 1.2;
   color: inherit; }
 
 h1, .h1 {
-  font-size: 2.75rem; }
+  font-size: 2.5rem; }
 
 h2, .h2 {
-  font-size: 2.2rem; }
+  font-size: 2rem; }
 
 h3, .h3 {
-  font-size: 1.925rem; }
+  font-size: 1.75rem; }
 
 h4, .h4 {
-  font-size: 1.65rem; }
+  font-size: 1.5rem; }
 
 h5, .h5 {
-  font-size: 1.375rem; }
+  font-size: 1.25rem; }
 
 h6, .h6 {
-  font-size: 1.1rem; }
+  font-size: 1rem; }
 
 .lead {
   font-size: 1.3rem;
@@ -380,7 +384,7 @@ mark,
 
 .blockquote {
   margin-bottom: 1.5rem;
-  font-size: 1.375rem; }
+  font-size: 1.25rem; }
 
 .blockquote-footer {
   display: block;
@@ -1251,9 +1255,9 @@ pre {
 .form-control {
   display: block;
   width: 100%;
-  height: calc(2.4rem + 2px);
+  height: calc(2.25rem + 2px);
   padding: 0.375rem 1rem;
-  font-size: 1.1rem;
+  font-size: 1rem;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -1300,13 +1304,13 @@ select.form-control:focus::-ms-value {
 .col-form-label-lg {
   padding-top: calc(0.55rem + 1px);
   padding-bottom: calc(0.55rem + 1px);
-  font-size: 1.375rem;
+  font-size: 1.25rem;
   line-height: 1.5; }
 
 .col-form-label-sm {
   padding-top: calc(0.25rem + 1px);
   padding-bottom: calc(0.25rem + 1px);
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   line-height: 1.5; }
 
 .form-control-plaintext {
@@ -1325,16 +1329,16 @@ select.form-control:focus::-ms-value {
     padding-left: 0; }
 
 .form-control-sm {
-  height: calc(1.94375rem + 2px);
+  height: calc(1.8125rem + 2px);
   padding: 0.25rem 0.5rem;
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
 
 .form-control-lg {
-  height: calc(3.1625rem + 2px);
+  height: calc(2.975rem + 2px);
   padding: 0.55rem 1.2rem;
-  font-size: 1.375rem;
+  font-size: 1.25rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
@@ -1402,7 +1406,7 @@ textarea.form-control {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   color: #fff;
   background-color: rgba(40, 167, 69, 0.9);
@@ -1484,7 +1488,7 @@ textarea.form-control {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   color: #fff;
   background-color: rgba(220, 53, 69, 0.9);
@@ -1604,7 +1608,7 @@ textarea.form-control {
   user-select: none;
   border: 1px solid transparent;
   padding: 0.375rem 1rem;
-  font-size: 1.1rem;
+  font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
@@ -2025,13 +2029,13 @@ fieldset:disabled a.btn {
 
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.55rem 1.2rem;
-  font-size: 1.375rem;
+  font-size: 1.25rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
 
@@ -2097,7 +2101,7 @@ input[type="button"].btn-block {
   min-width: 10rem;
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: #333;
   text-align: left;
   list-style: none;
@@ -2232,7 +2236,7 @@ input[type="button"].btn-block {
   display: block;
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   color: #6c757d;
   white-space: nowrap; }
 
@@ -2420,7 +2424,7 @@ input[type="button"].btn-block {
   align-items: center;
   padding: 0.375rem 1rem;
   margin-bottom: 0;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 200;
   line-height: 1.5;
   color: #495057;
@@ -2438,9 +2442,9 @@ input[type="button"].btn-block {
 .input-group-lg > .input-group-append > .input-group-text,
 .input-group-lg > .input-group-prepend > .btn,
 .input-group-lg > .input-group-append > .btn {
-  height: calc(3.1625rem + 2px);
+  height: calc(2.975rem + 2px);
   padding: 0.55rem 1.2rem;
-  font-size: 1.375rem;
+  font-size: 1.25rem;
   line-height: 1.5;
   border-radius: 0.3rem; }
 
@@ -2449,9 +2453,9 @@ input[type="button"].btn-block {
 .input-group-sm > .input-group-append > .input-group-text,
 .input-group-sm > .input-group-prepend > .btn,
 .input-group-sm > .input-group-append > .btn {
-  height: calc(1.94375rem + 2px);
+  height: calc(1.8125rem + 2px);
   padding: 0.25rem 0.5rem;
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.2rem; }
 
@@ -2476,7 +2480,7 @@ input[type="button"].btn-block {
 .custom-control {
   position: relative;
   display: block;
-  min-height: 1.65rem;
+  min-height: 1.5rem;
   padding-left: 1.5rem; }
 
 .custom-control-inline {
@@ -2507,7 +2511,7 @@ input[type="button"].btn-block {
   margin-bottom: 0; }
   .custom-control-label::before {
     position: absolute;
-    top: 0.325rem;
+    top: 0.25rem;
     left: -1.5rem;
     display: block;
     width: 1rem;
@@ -2519,7 +2523,7 @@ input[type="button"].btn-block {
     box-shadow: inset 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1); }
   .custom-control-label::after {
     position: absolute;
-    top: 0.325rem;
+    top: 0.25rem;
     left: -1.5rem;
     display: block;
     width: 1rem;
@@ -2566,7 +2570,7 @@ input[type="button"].btn-block {
 .custom-select {
   display: inline-block;
   width: 100%;
-  height: calc(2.4rem + 2px);
+  height: calc(2.25rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
   color: #495057;
@@ -2595,13 +2599,13 @@ input[type="button"].btn-block {
     opacity: 0; }
 
 .custom-select-sm {
-  height: calc(1.94375rem + 2px);
+  height: calc(1.8125rem + 2px);
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 75%; }
 
 .custom-select-lg {
-  height: calc(3.1625rem + 2px);
+  height: calc(2.975rem + 2px);
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 125%; }
@@ -2610,14 +2614,14 @@ input[type="button"].btn-block {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(2.4rem + 2px);
+  height: calc(2.25rem + 2px);
   margin-bottom: 0; }
 
 .custom-file-input {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: calc(2.4rem + 2px);
+  height: calc(2.25rem + 2px);
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-label {
@@ -2636,7 +2640,7 @@ input[type="button"].btn-block {
   right: 0;
   left: 0;
   z-index: 1;
-  height: calc(2.4rem + 2px);
+  height: calc(2.25rem + 2px);
   padding: 0.375rem 1rem;
   line-height: 1.5;
   color: #495057;
@@ -2651,7 +2655,7 @@ input[type="button"].btn-block {
     bottom: 0;
     z-index: 3;
     display: block;
-    height: 2.4rem;
+    height: 2.25rem;
     padding: 0.375rem 1rem;
     line-height: 1.5;
     color: #495057;
@@ -2844,10 +2848,10 @@ input[type="button"].btn-block {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.29375rem;
-  padding-bottom: 0.29375rem;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
   margin-right: 1.5rem;
-  font-size: 1.375rem;
+  font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap; }
   .navbar-brand:hover, .navbar-brand:focus {
@@ -2878,7 +2882,7 @@ input[type="button"].btn-block {
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
-  font-size: 1.375rem;
+  font-size: 1.25rem;
   line-height: 1;
   background-color: transparent;
   border: 1px solid transparent;
@@ -3352,7 +3356,7 @@ input[type="button"].btn-block {
 
 .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
-  font-size: 1.375rem;
+  font-size: 1.25rem;
   line-height: 1.5; }
 
 .pagination-lg .page-item:first-child .page-link {
@@ -3365,7 +3369,7 @@ input[type="button"].btn-block {
 
 .pagination-sm .page-link {
   padding: 0.25rem 0.5rem;
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   line-height: 1.5; }
 
 .pagination-sm .page-item:first-child .page-link {
@@ -3490,7 +3494,7 @@ input[type="button"].btn-block {
   font-weight: 700; }
 
 .alert-dismissible {
-  padding-right: 4.15rem; }
+  padding-right: 4rem; }
   .alert-dismissible .close {
     position: absolute;
     top: 0;
@@ -3580,7 +3584,7 @@ input[type="button"].btn-block {
   display: flex;
   height: 1rem;
   overflow: hidden;
-  font-size: 0.825rem;
+  font-size: 0.75rem;
   background-color: #e9ecef;
   border-radius: 0.25rem;
   box-shadow: inset 0 0.1rem 0.1rem rgba(0, 0, 0, 0.1); }
@@ -3757,7 +3761,7 @@ input[type="button"].btn-block {
 
 .close {
   float: right;
-  font-size: 1.65rem;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 1;
   color: #000;
@@ -3903,6 +3907,7 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
+  font-family: 'Noto Sans JP', sans-serif;
   font-style: normal;
   font-weight: 200;
   line-height: 1.5;
@@ -3916,7 +3921,7 @@ button.close {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   word-wrap: break-word;
   opacity: 0; }
   .tooltip.show {
@@ -3987,6 +3992,7 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
+  font-family: 'Noto Sans JP', sans-serif;
   font-style: normal;
   font-weight: 200;
   line-height: 1.5;
@@ -4000,7 +4006,7 @@ button.close {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.9625rem;
+  font-size: 0.875rem;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: padding-box;
@@ -4106,7 +4112,7 @@ button.close {
 .popover-header {
   padding: 0.5rem 0.75rem;
   margin-bottom: 0;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: inherit;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
@@ -6139,7 +6145,7 @@ button.bg-dark:focus {
     margin-left: auto !important; } }
 
 .text-monospace {
- }
+  font-family: 'Noto Sans JP', sans-serif; }
 
 .text-justify {
   text-align: justify !important; }
