--- a/docs/ver3/common.css
+++ b/docs/ver3/common.css
@@ -402,7 +402,7 @@ width: 768px;
   border: solid 1px #ccc;
   color: #333;
   padding: 10px;
-  width: 20%;
+  width: 25%;
 }
 .tbl-r02 td {
   background: #FAFAFA;
@@ -420,8 +420,10 @@ width: 768px;
   }
   .tbl-r02 th,
   .tbl-r02 td {
-　　border-bottom: none;
+    border-bottom: none;
     display: block;
     width: 100%;
   }
 }
+
+/* チェックボックスをbutton化 */
